--- a/package.json
+++ b/package.json
@@ -6,15 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "moralis:sync": "moralis-admin-cli connect-local-devchain --chain hardhat --moralisSubdomain ezcg5iyqywl1.usemoralis.com --frpcPath ./frp/frpc"
   },
   "dependencies": {
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "magic-sdk": "^9.0.0",
+    "moralis": "^1.5.0",
+    "moralis-admin-cli": "^2.1.16",
+    "next": "12.1.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.3.5",
+    "web3uikit": "^0.0.133"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "dotenv": "^16.0.2",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "moralis-v1": "^1.11.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
